tdf#144601 Qt fix creating QImage with alpha mask

Rechecking the QImage documentation, this actually can be easily
done; no more bit twiddling, which I got wrong to begin with.

LO's alpha mask is inverted to Qt's expectations, but we have
invertPixels() and then apply it with setAlphaChannel(). And we
can even set the fAlpha using setOpacity()!

Change-Id: If2030d3f87d3a4698d1cd9af005d307c2ee63061